# finfo-cli

./: .gitignore  Cargo.toml
src/: color.rs  finfo  main  main.rs  price.rs  stream.rs  ticker.rs
src/http/: mod.rs
src/parser/: choice.rs  glossary.rs  mod.rs
src/price/: mod.rs
src/utils/: color.rs  mod.rs  stream.rs
